test/syntax/fail/when/return_sampled_clock.sync

let node f x y =
  x when y
